--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,7 @@
   margin: 5% 10%;
   padding: 5%;
   border-radius: 10px;
+  width: 80%;
 }
 
 .archive-card{
@@ -184,13 +185,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 50%;
+  width: 20%;
+  transform: rotate(270deg);
+  translate: 0% 50%;
 }
 
 .inner-archive-card{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: red;
   color: white;
-  transform: rotate(270deg);
-  padding: 25% 65%;
+  padding: 10% 20%;
   border-radius: 10px;
   font-weight: bold;
 }
